--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "0.1.0",
   "private": true,
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "ISC",
   "scripts": {
-    "start": "nodemon index.js || node index.js"
+    "start": "nodemon --exec node_modules/.bin/ts-node index.ts"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -14,9 +14,16 @@
     "express": "^4.17.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.12.7",
+    "nodemon": "^2.0.14",
+    "typescript": "^5.4.5"
   }
 }
