--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,12 @@
     "@mui/types": "^7.2.14",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.1"
+    "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
