--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@react-three/drei": "^10.0.7",
-    "@react-three/fiber": "^9.1.2"
+    "@react-three/fiber": "^9.1.2",
+    "uuid": "^11.1.0"
   }
 }
