--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
-    "three": "^0.176.0"
+    "three": "^0.176.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/react": "^19.1.4",
