--- a/client/package.json
+++ b/client/package.json
@@ -13,19 +13,24 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.0",
     "@mui/types": "^7.4.2",
+    "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.8.1",
     "axios": "^1.9.0",
+    "leaflet": "^1.9.4",
     "notistack": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "three": "^0.176.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.18",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "@types/three": "^0.176.0",
